Add Verbs for Objectives tab based on Bloom's Taxonomy

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
   - Foundations: academic_writing/foundations.md
   - Grammar & Structure: academic_writing/structure.md
   - Vocabulary & Flow: academic_writing/vocabulary.md
+  - Verbs for Objectives: academic_writing/verbs_for_objectives.md
   - Core Modules:
     - 'Overview': core_modules/index.md
     - 'Part 1: Fluency': core_modules/01_fluency.md
