--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
   - Grammar & Structure: academic_writing/structure.md
   - Vocabulary & Flow: academic_writing/vocabulary.md
   - Verbs for Objectives: academic_writing/verbs_for_objectives.md
+  - Grammar Tips & Common Mistakes: academic_writing/grammar_tips.md
   - Core Modules:
     - 'Overview': core_modules/index.md
     - 'Part 1: Fluency': core_modules/01_fluency.md
